# arkan-relay

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  arkan-relay.toml  vcpkg.json
scripts/: build.ps1  build.sh  release.ps1  test.ps1  test.sh
src/adapters/inbound/cli/: CliMain.cpp
src/adapters/outbound/dll/: DllMain.cpp
src/application/ports/: IChecksumService.hpp  IConfigProvider.hpp  IFrameCodec.hpp  IHook.hpp  IKoreLink.hpp  ILogger.hpp
src/application/services/: Bootstrap.hpp  BridgeService.cpp  BridgeService.hpp
src/application/services/protocol/: ChecksumService.hpp  ChecksumService_Callback.cpp  ChecksumService_Callback.hpp  ChecksumState.hpp  ProtocolScanner.hpp  ProtocolScanner_Coalesced.cpp  ProtocolScanner_Coalesced.hpp
src/domain/: Settings.hpp
src/domain/protocol/: Opcodes.hpp  ProtocolRules.hpp
src/infrastructure/codec/: FrameCodec_Noop.hpp
src/infrastructure/config/: Config_Toml.cpp  Config_Toml.hpp
src/infrastructure/hook/: Hook_Win32.cpp  Hook_Win32.hpp
src/infrastructure/hook/win32/: AddressResolver.cpp  AddressResolver.hpp  Hook_Win32.cpp  Hook_Win32.hpp  MemoryAccess.cpp  MemoryAccess.hpp  SlotPatcher.hpp  SlotWatchdog.cpp  SlotWatchdog.hpp  Trampolines.cpp  Trampolines.hpp
src/infrastructure/link/: KoreLink_Asio.cpp  KoreLink_Asio.hpp
src/infrastructure/logging/: Logger_Spdlog.cpp  Logger_Spdlog.hpp
src/infrastructure/net/: RecvPipeline.cpp  RecvPipeline.hpp  SendPipeline.cpp  SendPipeline.hpp
src/infrastructure/win32/: PortClaim.cpp  PortClaim.hpp
src/shared/hex/: Hex.hpp
tests/: test_bootstrap.cpp  test_config.cpp  test_hook_win32.cpp  test_link_asio.cpp  test_logger.cpp
